--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us – Tutor Brian & Team</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <!-- Replace Inter with Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 <body>
@@ -72,7 +73,6 @@
     <blockquote>
       <p>“Education is the most powerful weapon which you can use to change the world.”</p>
       <cite>– Nelson Mandela</cite>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Nelson_Mandela-2008_%28edit%29.jpg/330px-Nelson_Mandela-2008_%28edit%29.jpg" alt="Nelson Mandela">
     </blockquote>
   </section>
 
