--- a/Index.html
+++ b/Index.html
@@ -137,19 +137,7 @@
 
   <a href="https://calendly.com/tutorjohntaylor/30min" class="book-mobile">Book Now</a>
 
-  <script>
-    const Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-    (function () {
-      const s1 = document.createElement("script");
-      s1.async = true;
-      s1.src = 'https://embed.tawk.to/68648d8d0340fc1912a7bc0a/1iv4chsr3';
-      s1.charset = 'UTF-8';
-      s1.setAttribute('crossorigin', '*');
-      const s0 = document.getElementsByTagName("script")[0];
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
-
+  <!-- Carousel Script -->
   <script>
     const track = document.querySelector('.carousel-track');
     const prevBtn = document.querySelector('.carousel-btn.prev');
@@ -168,18 +156,32 @@
     });
   </script>
 
+  <!-- AOS Script -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script>
     AOS.init({ duration: 1000, once: true });
   </script>
 
-  <!-- ✅ Mobile Menu Script -->
+  <!-- Mobile Menu Script -->
   <script>
     const toggle = document.getElementById("menu-toggle");
     const navLinks = document.getElementById("nav-links");
     toggle.addEventListener("click", () => {
       navLinks.classList.toggle("active");
     });
+  </script>
+
+  <!-- ✅ Tawk.to Chat Widget: Placed at the very bottom for best results -->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/68648d8d0340fc1912a7bc0a/1iv4chsr3';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
   </script>
 
 </body>
