--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
 
     .services-page h1 {
       text-align: center;
-      margin-bottom: 2rem;
+      margin-bottom: 2.5rem;
       font-size: 2.5rem;
     }
 
@@ -67,7 +67,7 @@
 </head>
 <body class="services-page">
 
-<!-- ✅ Navigation (same as index.html) -->
+<!-- ✅ Navigation -->
 <nav>
   <div class="nav-brand">Tutor Brian</div>
   <button class="menu-toggle" id="menu-toggle">☰</button>
@@ -87,37 +87,37 @@
     <div class="services-grid">
 
       <div class="service-card">
-        <img src="https://img.icons8.com/external-flat-icons-inmotus-design/67/000000/external-thesis-university-flat-icons-inmotus-design.png" alt="Thesis Icon" />
+        <img src="https://img.icons8.com/fluency/96/open-book.png" alt="Thesis Icon" />
         <h3>Thesis Structuring</h3>
         <p>Get help organizing your chapters, formulating research questions, and aligning your methodology to academic standards.</p>
       </div>
 
       <div class="service-card">
-        <img src="https://img.icons8.com/color/96/000000/document--v1.png" alt="Formatting Icon" />
+        <img src="https://img.icons8.com/color/96/document--v1.png" alt="Formatting Icon" />
         <h3>APA, MLA, Chicago Formatting</h3>
         <p>We ensure your citations, references, and formatting meet university-approved guidelines—without error.</p>
       </div>
 
       <div class="service-card">
-        <img src="https://img.icons8.com/external-wanicon-flat-wanicon/64/000000/external-ai-artificial-intelligence-wanicon-flat-wanicon.png" alt="AI Writing Icon" />
+        <img src="https://img.icons8.com/fluency/96/artificial-intelligence.png" alt="AI Writing Icon" />
         <h3>AI-Safe Academic Writing</h3>
         <p>We write and coach using ethical, human-led strategies that pass AI detectors and maintain originality.</p>
       </div>
 
       <div class="service-card">
-        <img src="https://img.icons8.com/dusk/64/000000/books.png" alt="Books Icon" />
+        <img src="https://img.icons8.com/dusk/64/books.png" alt="Books Icon" />
         <h3>Literature Reviews</h3>
         <p>We help synthesize sources, identify gaps, and build strong theoretical frameworks using current peer-reviewed research.</p>
       </div>
 
       <div class="service-card">
-        <img src="https://img.icons8.com/office/64/000000/lecturer.png" alt="Defense Icon" />
+        <img src="https://img.icons8.com/fluency/96/lecture.png" alt="Defense Icon" />
         <h3>Dissertation Defense Prep</h3>
         <p>Gain confidence with personalized prep sessions, mock defenses, and slides that highlight your key arguments.</p>
       </div>
 
       <div class="service-card">
-        <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-mentorship-professional-network-flaticons-lineal-color-flat-icons.png" alt="Coaching Icon" />
+        <img src="https://img.icons8.com/fluency/96/teacher.png" alt="Coaching Icon" />
         <h3>1-on-1 Research Coaching</h3>
         <p>Work directly with Tutor Brian to refine your topic, improve your writing, and overcome academic roadblocks.</p>
       </div>
@@ -126,7 +126,7 @@
   </section>
 </main>
 
-<!-- ✅ Footer (same as index.html) -->
+<!-- ✅ Footer -->
 <footer>
   <div class="footer-container">
     <div class="contact-info">
