--- a/services.html
+++ b/services.html
@@ -111,7 +111,7 @@
       </div>
 
       <div class="service-card">
-        <img src="https://img.icons8.com/fluency/96/lecture.png" alt="Defense Icon" />
+        <img src="https://img.icons8.com/fluency/96/presentation.png" alt="Defense Icon" />
         <h3>Dissertation Defense Prep</h3>
         <p>Gain confidence with personalized prep sessions, mock defenses, and slides that highlight your key arguments.</p>
       </div>
